# nanobot

./: pyproject.toml
nanobot/agent/: context.py  loop.py  memory.py
nanobot/channels/: telegram.py
nanobot/cli/: commands.py
nanobot/config/: schema.py
nanobot/providers/: litellm_provider.py
nanobot/utils/: helpers.py
